# aws-sqs-to-s3-etl

./: .env-example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: consumer.py  create_queue.py  create_s3_bucket.py  generate_users.py  main.py  producer.py
utils/: aws_client.py  settings.py
