[tool.poetry]
name = "aws-sqs-to-s3-etl"
version = "0.1.0"
description = ""
authors = ["Victor Contreras <contreras3991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
faker = "^37.4.0"
boto3 = "^1.39.4"
python-dotenv = "^1.1.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
